[gd_scene load_steps=2 format=3 uid="uid://t35pb2ajkk0d"]

[ext_resource type="Script" path="res://node_classes/spawner/spawn_manager.gd" id="1_lthhu"]

[node name="SpawnManager" type="Node2D"]
script = ExtResource("1_lthhu")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
